--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
     "cra-template-pwa": "2.0.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^5.0.3"
+    "web-vitals": "^5.0.3",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
